# savage-trade-evaluator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LESSONS.md  LICENSE  README.md  RESEARCH_LOG.md  SKILLS.md  pyproject.toml
.claude/: settings.json
.claude/commands/: check.md  decisions.md  pressly.md  sources.md  trade.md
.github/workflows/: claude-review.yml
data/duckdb/: affiliations_2026.json
docs/: DATA_SOURCE_PROBE.md  EXPERIMENT_PROTOCOL.md  NAIVE_BASELINE.md  PHASE1_SYNTHESIS.md  STATS_CATALOG.md  V2_DESIGN.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: _seed.html
scripts/: ablation_age_trajectory_features.py  ablation_coach_feature.py  ablation_dev_cluster_feature.py  ablation_draft_feature.py  ablation_hitter_feature.py  ablation_multi_outcome_omnibus.py  ablation_player_quality_feature.py  ablation_player_quality_xwoba_outcome.py  all_regimes_ranked.py  capture_screens.sh  cross_metric_pairwise.py  dev_credit_attribution.py  dev_credit_attribution_v2.py  dev_credit_full.py  enrich_player_war.py  explore_origin_org_dropoff.py  explore_system_tax_split.py  export_farm.py  export_model_posteriors.py  export_org_profiles.py  export_player_index.py  export_player_profiles.py  export_seed.py  export_warroom.py  investigate_regime_anomalies.py  org_stability_decade_split.py  origin_org_age_conditioned.py  origin_org_arsenal_k_pct.py  origin_org_pedigree_controlled.py  origin_org_pedigree_controlled_war.py  parse_fg_prospects.py  probe_data_sources.py  q01_q02_q07_experiments.py  r33_v2_vs_v1_ablation.py  r34_v0_v1_v2_bracket.py  r35_feature_decomp.py  r44_sigma_prior_sweep.py  r45_contention_window_ablation.py  r46_multilevel_smoke.py  r47_contention_components.py  (+23 more)
tests/: test_coaches_normalize.py  test_front_office_parser.py  test_ingest_transactions.py  test_rag_corpus.py
(+1412 files in other folders)
